y.output
Terminals unused in grammar

   T_Break
   T_Continue
   T_Return
   T_RightBracket
   T_LeftBracket


State 27 conflicts: 1 shift/reduce
State 28 conflicts: 25 shift/reduce
State 45 conflicts: 1 shift/reduce
State 150 conflicts: 25 shift/reduce
State 151 conflicts: 25 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: Single_Declaration T_Semicolon
    5     | Function_Prototype T_Semicolon
    6     | Function_Definition

    7 Function_Prototype: Function_Declarator T_RightParen

    8 Function_Declarator: Function_Header

    9 Function_Header: Fully_Specified_Type T_Identifier T_LeftParen
   10                | Fully_Specified_Type T_Identifier T_LeftParen ParamDeclList

   11 ParamDeclList: Parameter_Declaration T_Comma ParamDeclList
   12              | Parameter_Declaration

   13 Parameter_Declaration: Fully_Specified_Type T_Identifier
   14                      | Fully_Specified_Type

   15 Single_Declaration: Fully_Specified_Type T_Identifier

   16 Single_Declaration_List: Single_Declaration_List Single_Declaration
   17                        | /* empty */

   18 Fully_Specified_Type: T_Void
   19                     | T_Float
   20                     | T_Int
   21                     | T_Bool
   22                     | T_Vec2
   23                     | T_Vec3
   24                     | T_Vec4
   25                     | T_Mat2
   26                     | T_Mat3
   27                     | T_Mat4

   28 Function_Definition: Function_Prototype Compound_Statement

   29 Compound_Statement: T_LeftBrace Single_Declaration_List Statement_List T_RightBrace

   30 Statement_List: Statement_List Statement
   31               | Statement
   32               | /* empty */

   33 Statement: Compound_Statement
   34          | Simple_Statement

   35 Simple_Statement: Declaration_Statement
   36                 | Expression_Statement
   37                 | Selection_Statement
   38                 | Switch_Statement
   39                 | Iteration_Statement

   40 Declaration_Statement: Decl

   41 Expression_Statement: Expression T_Semicolon
   42                     | T_Semicolon

   43 Expression: Assignment_Expression

   44 Assignment_Expression: Conditional_Expression
   45                      | Unary_Expression Assignment_Operator Assignment_Expression

   46 Conditional_Expression: Logical_Or_Expression

   47 Logical_Or_Expression: Logical_Xor_Expression
   48                      | Logical_Or_Expression T_Or_op Logical_Xor_Expression

   49 Logical_Xor_Expression: Logical_And_Expression

   50 Logical_And_Expression: Inclusive_Or_Expression
   51                       | Logical_And_Expression T_And_op Inclusive_Or_Expression

   52 Inclusive_Or_Expression: Exclusive_Or_Expression

   53 Exclusive_Or_Expression: And_Expression

   54 And_Expression: Equality_Expression

   55 Equality_Expression: Relational_Expression
   56                    | Equality_Expression T_EQ_op Relational_Expression
   57                    | Equality_Expression T_NE_op Relational_Expression

   58 Relational_Expression: Shift_Expression
   59                      | Relational_Expression T_LeftAngle Shift_Expression
   60                      | Relational_Expression T_RightAngle Shift_Expression
   61                      | Relational_Expression T_LE_op Shift_Expression
   62                      | Relational_Expression T_GE_op Shift_Expression

   63 Shift_Expression: Additive_Expression

   64 Additive_Expression: Multiplicative_Expression
   65                    | Additive_Expression T_Plus Multiplicative_Expression
   66                    | Additive_Expression T_Dash Multiplicative_Expression

   67 Multiplicative_Expression: Unary_Expression
   68                          | Multiplicative_Expression T_Star Unary_Expression
   69                          | Multiplicative_Expression T_Slash Unary_Expression

   70 Unary_Expression: Postfix_Expression
   71                 | T_Inc_op Unary_Expression
   72                 | T_Dec_op Unary_Expression
   73                 | Unary_Operator Unary_Expression

   74 Postfix_Expression: Primary_Expression
   75                   | Postfix_Expression T_Dot T_Field_selection
   76                   | Postfix_Expression T_Inc_op
   77                   | Postfix_Expression T_Dec_op

   78 Assignment_Operator: T_Equal
   79                    | T_Mul_assign
   80                    | T_Div_assign
   81                    | T_Add_assign
   82                    | T_Sub_assign

   83 Unary_Operator: T_Plus
   84               | T_Dash

   85 Primary_Expression: T_IntConstant
   86                   | T_FloatConstant
   87                   | T_BoolConstant
   88                   | T_Identifier
   89                   | T_LeftParen Expression T_RightParen

   90 Selection_Statement: T_If T_LeftParen Expression T_RightParen Compound_Statement
   91                    | T_If T_LeftParen Expression T_RightParen Compound_Statement T_Else Statement

   92 Switch_Statement: T_Switch T_LeftParen Expression T_RightParen T_LeftBrace Case_List Default T_RightBrace

   93 Case_List: Case_List Case
   94          | Case

   95 Default: T_Default T_Colon Statement_List
   96        | /* empty */

   97 Case: T_Case T_IntConstant T_Colon Statement_List

   98 Iteration_Statement: T_While T_LeftParen Expression T_RightParen Statement
   99                    | T_For T_LeftParen Expression_Statement Expression_Statement Expression T_RightParen Statement


Terminals, with rules where they appear

$end (0) 0
error (256)
T_Void (258) 18
T_Bool (259) 21
T_Float (260) 19
T_Int (261) 20
T_Vec2 (262) 22
T_Vec3 (263) 23
T_Vec4 (264) 24
T_Mat2 (265) 25
T_Mat3 (266) 26
T_Mat4 (267) 27
T_While (268) 98
T_Break (269)
T_Continue (270)
T_Else (271) 91
T_For (272) 99
T_If (273) 90 91
T_Return (274)
T_Switch (275) 92
T_Case (276) 97
T_Default (277) 95
T_Field_selection (278) 75
T_Identifier (279) 9 10 13 15 88
T_IntConstant (280) 85 97
T_FloatConstant (281) 86
T_BoolConstant (282) 87
T_LeftParen (283) 9 10 89 90 91 92 98 99
T_RightParen (284) 7 89 90 91 92 98 99
T_Dot (285) 75
T_Inc_op (286) 71 76
T_NE_op (287) 57
T_EQ_op (288) 56
T_GE_op (289) 62
T_LE_op (290) 61
T_LeftAngle (291) 59
T_RightAngle (292) 60
T_Slash (293) 69
T_Star (294) 68
T_Dash (295) 66 84
T_Plus (296) 65 83
T_Dec_op (297) 72 77
T_And_op (298) 51
T_Or_op (299) 48
T_Equal (300) 78
T_Add_assign (301) 81
T_Sub_assign (302) 82
T_Comma (303) 11
T_RightBracket (304)
T_LeftBracket (305)
T_RightBrace (306) 29 92
T_LeftBrace (307) 29 92
T_Semicolon (308) 4 5 41 42
T_Colon (309) 95 97
T_Div_assign (310) 80
T_Mul_assign (311) 79


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
Program (58)
    on left: 1, on right: 0
DeclList (59)
    on left: 2 3, on right: 1 2
Decl (60)
    on left: 4 5 6, on right: 2 3 40
Function_Prototype (61)
    on left: 7, on right: 5 28
Function_Declarator (62)
    on left: 8, on right: 7
Function_Header (63)
    on left: 9 10, on right: 8
ParamDeclList (64)
    on left: 11 12, on right: 10 11
Parameter_Declaration (65)
    on left: 13 14, on right: 11 12
Single_Declaration (66)
    on left: 15, on right: 4 16
Single_Declaration_List (67)
    on left: 16 17, on right: 16 29
Fully_Specified_Type (68)
    on left: 18 19 20 21 22 23 24 25 26 27, on right: 9 10 13 14 15
Function_Definition (69)
    on left: 28, on right: 6
Compound_Statement (70)
    on left: 29, on right: 28 33 90 91
Statement_List (71)
    on left: 30 31 32, on right: 29 30 95 97
Statement (72)
    on left: 33 34, on right: 30 31 91 98 99
Simple_Statement (73)
    on left: 35 36 37 38 39, on right: 34
Declaration_Statement (74)
    on left: 40, on right: 35
Expression_Statement (75)
    on left: 41 42, on right: 36 99
Expression (76)
    on left: 43, on right: 41 89 90 91 92 98 99
Assignment_Expression (77)
    on left: 44 45, on right: 43 45
Conditional_Expression (78)
    on left: 46, on right: 44
Logical_Or_Expression (79)
    on left: 47 48, on right: 46 48
Logical_Xor_Expression (80)
    on left: 49, on right: 47 48
Logical_And_Expression (81)
    on left: 50 51, on right: 49 51
Inclusive_Or_Expression (82)
    on left: 52, on right: 50 51
Exclusive_Or_Expression (83)
    on left: 53, on right: 52
And_Expression (84)
    on left: 54, on right: 53
Equality_Expression (85)
    on left: 55 56 57, on right: 54 56 57
Relational_Expression (86)
    on left: 58 59 60 61 62, on right: 55 56 57 59 60 61 62
Shift_Expression (87)
    on left: 63, on right: 58 59 60 61 62
Additive_Expression (88)
    on left: 64 65 66, on right: 63 65 66
Multiplicative_Expression (89)
    on left: 67 68 69, on right: 64 65 66 68 69
Unary_Expression (90)
    on left: 70 71 72 73, on right: 45 67 68 69 71 72 73
Postfix_Expression (91)
    on left: 74 75 76 77, on right: 70 75 76 77
Assignment_Operator (92)
    on left: 78 79 80 81 82, on right: 45
Unary_Operator (93)
    on left: 83 84, on right: 73
Primary_Expression (94)
    on left: 85 86 87 88 89, on right: 74
Selection_Statement (95)
    on left: 90 91, on right: 37
Switch_Statement (96)
    on left: 92, on right: 38
Case_List (97)
    on left: 93 94, on right: 92 93
Default (98)
    on left: 95 96, on right: 92
Case (99)
    on left: 97, on right: 93 94
Iteration_Statement (100)
    on left: 98 99, on right: 39


state 0

    0 $accept: . Program $end

    T_Void   shift, and go to state 1
    T_Bool   shift, and go to state 2
    T_Float  shift, and go to state 3
    T_Int    shift, and go to state 4
    T_Vec2   shift, and go to state 5
    T_Vec3   shift, and go to state 6
    T_Vec4   shift, and go to state 7
    T_Mat2   shift, and go to state 8
    T_Mat3   shift, and go to state 9
    T_Mat4   shift, and go to state 10

    Program               go to state 11
    DeclList              go to state 12
    Decl                  go to state 13
    Function_Prototype    go to state 14
    Function_Declarator   go to state 15
    Function_Header       go to state 16
    Single_Declaration    go to state 17
    Fully_Specified_Type  go to state 18
    Function_Definition   go to state 19


state 1

   18 Fully_Specified_Type: T_Void .

    $default  reduce using rule 18 (Fully_Specified_Type)


state 2

   21 Fully_Specified_Type: T_Bool .

    $default  reduce using rule 21 (Fully_Specified_Type)


state 3

   19 Fully_Specified_Type: T_Float .

    $default  reduce using rule 19 (Fully_Specified_Type)


state 4

   20 Fully_Specified_Type: T_Int .

    $default  reduce using rule 20 (Fully_Specified_Type)


state 5

   22 Fully_Specified_Type: T_Vec2 .

    $default  reduce using rule 22 (Fully_Specified_Type)


state 6

   23 Fully_Specified_Type: T_Vec3 .

    $default  reduce using rule 23 (Fully_Specified_Type)


state 7

   24 Fully_Specified_Type: T_Vec4 .

    $default  reduce using rule 24 (Fully_Specified_Type)


state 8

   25 Fully_Specified_Type: T_Mat2 .

    $default  reduce using rule 25 (Fully_Specified_Type)


state 9

   26 Fully_Specified_Type: T_Mat3 .

    $default  reduce using rule 26 (Fully_Specified_Type)


state 10

   27 Fully_Specified_Type: T_Mat4 .

    $default  reduce using rule 27 (Fully_Specified_Type)


state 11

    0 $accept: Program . $end

    $end  shift, and go to state 20


state 12

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void   shift, and go to state 1
    T_Bool   shift, and go to state 2
    T_Float  shift, and go to state 3
    T_Int    shift, and go to state 4
    T_Vec2   shift, and go to state 5
    T_Vec3   shift, and go to state 6
    T_Vec4   shift, and go to state 7
    T_Mat2   shift, and go to state 8
    T_Mat3   shift, and go to state 9
    T_Mat4   shift, and go to state 10

    $default  reduce using rule 1 (Program)

    Decl                  go to state 21
    Function_Prototype    go to state 14
    Function_Declarator   go to state 15
    Function_Header       go to state 16
    Single_Declaration    go to state 17
    Fully_Specified_Type  go to state 18
    Function_Definition   go to state 19


state 13

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


state 14

    5 Decl: Function_Prototype . T_Semicolon
   28 Function_Definition: Function_Prototype . Compound_Statement

    T_LeftBrace  shift, and go to state 22
    T_Semicolon  shift, and go to state 23

    Compound_Statement  go to state 24


state 15

    7 Function_Prototype: Function_Declarator . T_RightParen

    T_RightParen  shift, and go to state 25


state 16

    8 Function_Declarator: Function_Header .

    $default  reduce using rule 8 (Function_Declarator)


state 17

    4 Decl: Single_Declaration . T_Semicolon

    T_Semicolon  shift, and go to state 26


state 18

    9 Function_Header: Fully_Specified_Type . T_Identifier T_LeftParen
   10                | Fully_Specified_Type . T_Identifier T_LeftParen ParamDeclList
   15 Single_Declaration: Fully_Specified_Type . T_Identifier

    T_Identifier  shift, and go to state 27


state 19

    6 Decl: Function_Definition .

    $default  reduce using rule 6 (Decl)


state 20

    0 $accept: Program $end .

    $default  accept


state 21

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


state 22

   29 Compound_Statement: T_LeftBrace . Single_Declaration_List Statement_List T_RightBrace

    $default  reduce using rule 17 (Single_Declaration_List)

    Single_Declaration_List  go to state 28


state 23

    5 Decl: Function_Prototype T_Semicolon .

    $default  reduce using rule 5 (Decl)


state 24

   28 Function_Definition: Function_Prototype Compound_Statement .

    $default  reduce using rule 28 (Function_Definition)


state 25

    7 Function_Prototype: Function_Declarator T_RightParen .

    $default  reduce using rule 7 (Function_Prototype)


state 26

    4 Decl: Single_Declaration T_Semicolon .

    $default  reduce using rule 4 (Decl)


state 27

    9 Function_Header: Fully_Specified_Type T_Identifier . T_LeftParen
   10                | Fully_Specified_Type T_Identifier . T_LeftParen ParamDeclList
   15 Single_Declaration: Fully_Specified_Type T_Identifier .

    T_LeftParen  shift, and go to state 29

    T_LeftParen  [reduce using rule 15 (Single_Declaration)]
    $default     reduce using rule 15 (Single_Declaration)


state 28

   16 Single_Declaration_List: Single_Declaration_List . Single_Declaration
   29 Compound_Statement: T_LeftBrace Single_Declaration_List . Statement_List T_RightBrace

    T_Void           shift, and go to state 1
    T_Bool           shift, and go to state 2
    T_Float          shift, and go to state 3
    T_Int            shift, and go to state 4
    T_Vec2           shift, and go to state 5
    T_Vec3           shift, and go to state 6
    T_Vec4           shift, and go to state 7
    T_Mat2           shift, and go to state 8
    T_Mat3           shift, and go to state 9
    T_Mat4           shift, and go to state 10
    T_While          shift, and go to state 30
    T_For            shift, and go to state 31
    T_If             shift, and go to state 32
    T_Switch         shift, and go to state 33
    T_Identifier     shift, and go to state 34
    T_IntConstant    shift, and go to state 35
    T_FloatConstant  shift, and go to state 36
    T_BoolConstant   shift, and go to state 37
    T_LeftParen      shift, and go to state 38
    T_Inc_op         shift, and go to state 39
    T_Dash           shift, and go to state 40
    T_Plus           shift, and go to state 41
    T_Dec_op         shift, and go to state 42
    T_LeftBrace      shift, and go to state 22
    T_Semicolon      shift, and go to state 43

    T_Void           [reduce using rule 32 (Statement_List)]
    T_Bool           [reduce using rule 32 (Statement_List)]
    T_Float          [reduce using rule 32 (Statement_List)]
    T_Int            [reduce using rule 32 (Statement_List)]
    T_Vec2           [reduce using rule 32 (Statement_List)]
    T_Vec3           [reduce using rule 32 (Statement_List)]
    T_Vec4           [reduce using rule 32 (Statement_List)]
    T_Mat2           [reduce using rule 32 (Statement_List)]
    T_Mat3           [reduce using rule 32 (Statement_List)]
    T_Mat4           [reduce using rule 32 (Statement_List)]
    T_While          [reduce using rule 32 (Statement_List)]
    T_For            [reduce using rule 32 (Statement_List)]
    T_If             [reduce using rule 32 (Statement_List)]
    T_Switch         [reduce using rule 32 (Statement_List)]
    T_Identifier     [reduce using rule 32 (Statement_List)]
    T_IntConstant    [reduce using rule 32 (Statement_List)]
    T_FloatConstant  [reduce using rule 32 (Statement_List)]
    T_BoolConstant   [reduce using rule 32 (Statement_List)]
    T_LeftParen      [reduce using rule 32 (Statement_List)]
    T_Inc_op         [reduce using rule 32 (Statement_List)]
    T_Dash           [reduce using rule 32 (Statement_List)]
    T_Plus           [reduce using rule 32 (Statement_List)]
    T_Dec_op         [reduce using rule 32 (Statement_List)]
    T_LeftBrace      [reduce using rule 32 (Statement_List)]
    T_Semicolon      [reduce using rule 32 (Statement_List)]
    $default         reduce using rule 32 (Statement_List)

    Decl                       go to state 44
    Function_Prototype         go to state 14
    Function_Declarator        go to state 15
    Function_Header            go to state 16
    Single_Declaration         go to state 45
    Fully_Specified_Type       go to state 18
    Function_Definition        go to state 19
    Compound_Statement         go to state 46
    Statement_List             go to state 47
    Statement                  go to state 48
    Simple_Statement           go to state 49
    Declaration_Statement      go to state 50
    Expression_Statement       go to state 51
    Expression                 go to state 52
    Assignment_Expression      go to state 53
    Conditional_Expression     go to state 54
    Logical_Or_Expression      go to state 55
    Logical_Xor_Expression     go to state 56
    Logical_And_Expression     go to state 57
    Inclusive_Or_Expression    go to state 58
    Exclusive_Or_Expression    go to state 59
    And_Expression             go to state 60
    Equality_Expression        go to state 61
    Relational_Expression      go to state 62
    Shift_Expression           go to state 63
    Additive_Expression        go to state 64
    Multiplicative_Expression  go to state 65
    Unary_Expression           go to state 66
    Postfix_Expression         go to state 67
    Unary_Operator             go to state 68
    Primary_Expression         go to state 69
    Selection_Statement        go to state 70
    Switch_Statement           go to state 71
    Iteration_Statement        go to state 72


state 29

    9 Function_Header: Fully_Specified_Type T_Identifier T_LeftParen .
   10                | Fully_Specified_Type T_Identifier T_LeftParen . ParamDeclList

    T_Void   shift, and go to state 1
    T_Bool   shift, and go to state 2
    T_Float  shift, and go to state 3
    T_Int    shift, and go to state 4
    T_Vec2   shift, and go to state 5
    T_Vec3   shift, and go to state 6
    T_Vec4   shift, and go to state 7
    T_Mat2   shift, and go to state 8
    T_Mat3   shift, and go to state 9
    T_Mat4   shift, and go to state 10

    $default  reduce using rule 9 (Function_Header)

    ParamDeclList          go to state 73
    Parameter_Declaration  go to state 74
    Fully_Specified_Type   go to state 75


state 30

   98 Iteration_Statement: T_While . T_LeftParen Expression T_RightParen Statement

    T_LeftParen  shift, and go to state 76


state 31

   99 Iteration_Statement: T_For . T_LeftParen Expression_Statement Expression_Statement Expression T_RightParen Statement

    T_LeftParen  shift, and go to state 77


state 32

   90 Selection_Statement: T_If . T_LeftParen Expression T_RightParen Compound_Statement
   91                    | T_If . T_LeftParen Expression T_RightParen Compound_Statement T_Else Statement

    T_LeftParen  shift, and go to state 78


state 33

   92 Switch_Statement: T_Switch . T_LeftParen Expression T_RightParen T_LeftBrace Case_List Default T_RightBrace

    T_LeftParen  shift, and go to state 79


state 34

   88 Primary_Expression: T_Identifier .

    $default  reduce using rule 88 (Primary_Expression)


state 35

   85 Primary_Expression: T_IntConstant .

    $default  reduce using rule 85 (Primary_Expression)


state 36

   86 Primary_Expression: T_FloatConstant .

    $default  reduce using rule 86 (Primary_Expression)


state 37

   87 Primary_Expression: T_BoolConstant .

    $default  reduce using rule 87 (Primary_Expression)


state 38

   89 Primary_Expression: T_LeftParen . Expression T_RightParen

    T_Identifier     shift, and go to state 34
    T_IntConstant    shift, and go to state 35
    T_FloatConstant  shift, and go to state 36
    T_BoolConstant   shift, and go to state 37
    T_LeftParen      shift, and go to state 38
    T_Inc_op         shift, and go to state 39
    T_Dash           shift, and go to state 40
    T_Plus           shift, and go to state 41
    T_Dec_op         shift, and go to state 42

    Expression                 go to state 80
    Assignment_Expression      go to state 53
    Conditional_Expression     go to state 54
    Logical_Or_Expression      go to state 55
    Logical_Xor_Expression     go to state 56
    Logical_And_Expression     go to state 57
    Inclusive_Or_Expression    go to state 58
    Exclusive_Or_Expression    go to state 59
    And_Expression             go to state 60
    Equality_Expression        go to state 61
    Relational_Expression      go to state 62
    Shift_Expression           go to state 63
    Additive_Expression        go to state 64
    Multiplicative_Expression  go to state 65
    Unary_Expression           go to state 66
    Postfix_Expression         go to state 67
    Unary_Operator             go to state 68
    Primary_Expression         go to state 69


state 39

   71 Unary_Expression: T_Inc_op . Unary_Expression

    T_Identifier     shift, and go to state 34
    T_IntConstant    shift, and go to state 35
    T_FloatConstant  shift, and go to state 36
    T_BoolConstant   shift, and go to state 37
    T_LeftParen      shift, and go to state 38
    T_Inc_op         shift, and go to state 39
    T_Dash           shift, and go to state 40
    T_Plus           shift, and go to state 41
    T_Dec_op         shift, and go to state 42

    Unary_Expression    go to state 81
    Postfix_Expression  go to state 67
    Unary_Operator      go to state 68
    Primary_Expression  go to state 69


state 40

   84 Unary_Operator: T_Dash .

    $default  reduce using rule 84 (Unary_Operator)


state 41

   83 Unary_Operator: T_Plus .

    $default  reduce using rule 83 (Unary_Operator)


state 42

   72 Unary_Expression: T_Dec_op . Unary_Expression

    T_Identifier     shift, and go to state 34
    T_IntConstant    shift, and go to state 35
    T_FloatConstant  shift, and go to state 36
    T_BoolConstant   shift, and go to state 37
    T_LeftParen      shift, and go to state 38
    T_Inc_op         shift, and go to state 39
    T_Dash           shift, and go to state 40
    T_Plus           shift, and go to state 41
    T_Dec_op         shift, and go to state 42

    Unary_Expression    go to state 82
    Postfix_Expression  go to state 67
    Unary_Operator      go to state 68
    Primary_Expression  go to state 69


state 43

   42 Expression_Statement: T_Semicolon .

    $default  reduce using rule 42 (Expression_Statement)


state 44

   40 Declaration_Statement: Decl .

    $default  reduce using rule 40 (Declaration_Statement)


state 45

    4 Decl: Single_Declaration . T_Semicolon
   16 Single_Declaration_List: Single_Declaration_List Single_Declaration .

    T_Semicolon  shift, and go to state 26

    T_Semicolon  [reduce using rule 16 (Single_Declaration_List)]
    $default     reduce using rule 16 (Single_Declaration_List)


state 46

   33 Statement: Compound_Statement .

    $default  reduce using rule 33 (Statement)


state 47

   29 Compound_Statement: T_LeftBrace Single_Declaration_List Statement_List . T_RightBrace
   30 Statement_List: Statement_List . Statement

    T_Void           shift, and go to state 1
    T_Bool           shift, and go to state 2
    T_Float          shift, and go to state 3
    T_Int            shift, and go to state 4
    T_Vec2           shift, and go to state 5
    T_Vec3           shift, and go to state 6
    T_Vec4           shift, and go to state 7
    T_Mat2           shift, and go to state 8
    T_Mat3           shift, and go to state 9
    T_Mat4           shift, and go to state 10
    T_While          shift, and go to state 30
    T_For            shift, and go to state 31
    T_If             shift, and go to state 32
    T_Switch         shift, and go to state 33
    T_Identifier     shift, and go to state 34
    T_IntConstant    shift, and go to state 35
    T_FloatConstant  shift, and go to state 36
    T_BoolConstant   shift, and go to state 37
    T_LeftParen      shift, and go to state 38
    T_Inc_op         shift, and go to state 39
    T_Dash           shift, and go to state 40
    T_Plus           shift, and go to state 41
    T_Dec_op         shift, and go to state 42
    T_RightBrace     shift, and go to state 83
    T_LeftBrace      shift, and go to state 22
    T_Semicolon      shift, and go to state 43

    Decl                       go to state 44
    Function_Prototype         go to state 14
    Function_Declarator        go to state 15
    Function_Header            go to state 16
    Single_Declaration         go to state 17
    Fully_Specified_Type       go to state 18
    Function_Definition        go to state 19
    Compound_Statement         go to state 46
    Statement                  go to state 84
    Simple_Statement           go to state 49
    Declaration_Statement      go to state 50
    Expression_Statement       go to state 51
    Expression                 go to state 52
    Assignment_Expression      go to state 53
    Conditional_Expression     go to state 54
    Logical_Or_Expression      go to state 55
    Logical_Xor_Expression     go to state 56
    Logical_And_Expression     go to state 57
    Inclusive_Or_Expression    go to state 58
    Exclusive_Or_Expression    go to state 59
    And_Expression             go to state 60
    Equality_Expression        go to state 61
    Relational_Expression      go to state 62
    Shift_Expression           go to state 63
    Additive_Expression        go to state 64
    Multiplicative_Expression  go to state 65
    Unary_Expression           go to state 66
    Postfix_Expression         go to state 67
    Unary_Operator             go to state 68
    Primary_Expression         go to state 69
    Selection_Statement        go to state 70
    Switch_Statement           go to state 71
    Iteration_Statement        go to state 72


state 48

   31 Statement_List: Statement .

    $default  reduce using rule 31 (Statement_List)


state 49

   34 Statement: Simple_Statement .

    $default  reduce using rule 34 (Statement)


state 50

   35 Simple_Statement: Declaration_Statement .

    $default  reduce using rule 35 (Simple_Statement)


state 51

   36 Simple_Statement: Expression_Statement .

    $default  reduce using rule 36 (Simple_Statement)


state 52

   41 Expression_Statement: Expression . T_Semicolon

    T_Semicolon  shift, and go to state 85


state 53

   43 Expression: Assignment_Expression .

    $default  reduce using rule 43 (Expression)


state 54

   44 Assignment_Expression: Conditional_Expression .

    $default  reduce using rule 44 (Assignment_Expression)


state 55

   46 Conditional_Expression: Logical_Or_Expression .
   48 Logical_Or_Expression: Logical_Or_Expression . T_Or_op Logical_Xor_Expression

    T_Or_op  shift, and go to state 86

    $default  reduce using rule 46 (Conditional_Expression)


state 56

   47 Logical_Or_Expression: Logical_Xor_Expression .

    $default  reduce using rule 47 (Logical_Or_Expression)


state 57

   49 Logical_Xor_Expression: Logical_And_Expression .
   51 Logical_And_Expression: Logical_And_Expression . T_And_op Inclusive_Or_Expression

    T_And_op  shift, and go to state 87

    $default  reduce using rule 49 (Logical_Xor_Expression)


state 58

   50 Logical_And_Expression: Inclusive_Or_Expression .

    $default  reduce using rule 50 (Logical_And_Expression)


state 59

   52 Inclusive_Or_Expression: Exclusive_Or_Expression .

    $default  reduce using rule 52 (Inclusive_Or_Expression)


state 60

   53 Exclusive_Or_Expression: And_Expression .

    $default  reduce using rule 53 (Exclusive_Or_Expression)


state 61

   54 And_Expression: Equality_Expression .
   56 Equality_Expression: Equality_Expression . T_EQ_op Relational_Expression
   57                    | Equality_Expression . T_NE_op Relational_Expression

    T_NE_op  shift, and go to state 88
    T_EQ_op  shift, and go to state 89

    $default  reduce using rule 54 (And_Expression)


state 62

   55 Equality_Expression: Relational_Expression .
   59 Relational_Expression: Relational_Expression . T_LeftAngle Shift_Expression
   60                      | Relational_Expression . T_RightAngle Shift_Expression
   61                      | Relational_Expression . T_LE_op Shift_Expression
   62                      | Relational_Expression . T_GE_op Shift_Expression

    T_GE_op       shift, and go to state 90
    T_LE_op       shift, and go to state 91
    T_LeftAngle   shift, and go to state 92
    T_RightAngle  shift, and go to state 93

    $default  reduce using rule 55 (Equality_Expression)


state 63

   58 Relational_Expression: Shift_Expression .

    $default  reduce using rule 58 (Relational_Expression)


state 64

   63 Shift_Expression: Additive_Expression .
   65 Additive_Expression: Additive_Expression . T_Plus Multiplicative_Expression
   66                    | Additive_Expression . T_Dash Multiplicative_Expression

    T_Dash  shift, and go to state 94
    T_Plus  shift, and go to state 95

    $default  reduce using rule 63 (Shift_Expression)


state 65

   64 Additive_Expression: Multiplicative_Expression .
   68 Multiplicative_Expression: Multiplicative_Expression . T_Star Unary_Expression
   69                          | Multiplicative_Expression . T_Slash Unary_Expression

    T_Slash  shift, and go to state 96
    T_Star   shift, and go to state 97

    $default  reduce using rule 64 (Additive_Expression)


state 66

   45 Assignment_Expression: Unary_Expression . Assignment_Operator Assignment_Expression
   67 Multiplicative_Expression: Unary_Expression .

    T_Equal       shift, and go to state 98
    T_Add_assign  shift, and go to state 99
    T_Sub_assign  shift, and go to state 100
    T_Div_assign  shift, and go to state 101
    T_Mul_assign  shift, and go to state 102

    $default  reduce using rule 67 (Multiplicative_Expression)

    Assignment_Operator  go to state 103


state 67

   70 Unary_Expression: Postfix_Expression .
   75 Postfix_Expression: Postfix_Expression . T_Dot T_Field_selection
   76                   | Postfix_Expression . T_Inc_op
   77                   | Postfix_Expression . T_Dec_op

    T_Dot     shift, and go to state 104
    T_Inc_op  shift, and go to state 105
    T_Dec_op  shift, and go to state 106

    $default  reduce using rule 70 (Unary_Expression)


state 68

   73 Unary_Expression: Unary_Operator . Unary_Expression

    T_Identifier     shift, and go to state 34
    T_IntConstant    shift, and go to state 35
    T_FloatConstant  shift, and go to state 36
    T_BoolConstant   shift, and go to state 37
    T_LeftParen      shift, and go to state 38
    T_Inc_op         shift, and go to state 39
    T_Dash           shift, and go to state 40
    T_Plus           shift, and go to state 41
    T_Dec_op         shift, and go to state 42

    Unary_Expression    go to state 107
    Postfix_Expression  go to state 67
    Unary_Operator      go to state 68
    Primary_Expression  go to state 69


state 69

   74 Postfix_Expression: Primary_Expression .

    $default  reduce using rule 74 (Postfix_Expression)


state 70

   37 Simple_Statement: Selection_Statement .

    $default  reduce using rule 37 (Simple_Statement)


state 71

   38 Simple_Statement: Switch_Statement .

    $default  reduce using rule 38 (Simple_Statement)


state 72

   39 Simple_Statement: Iteration_Statement .

    $default  reduce using rule 39 (Simple_Statement)


state 73

   10 Function_Header: Fully_Specified_Type T_Identifier T_LeftParen ParamDeclList .

    $default  reduce using rule 10 (Function_Header)


state 74

   11 ParamDeclList: Parameter_Declaration . T_Comma ParamDeclList
   12              | Parameter_Declaration .

    T_Comma  shift, and go to state 108

    $default  reduce using rule 12 (ParamDeclList)


state 75

   13 Parameter_Declaration: Fully_Specified_Type . T_Identifier
   14                      | Fully_Specified_Type .

    T_Identifier  shift, and go to state 109

    $default  reduce using rule 14 (Parameter_Declaration)


state 76

   98 Iteration_Statement: T_While T_LeftParen . Expression T_RightParen Statement

    T_Identifier     shift, and go to state 34
    T_IntConstant    shift, and go to state 35
    T_FloatConstant  shift, and go to state 36
    T_BoolConstant   shift, and go to state 37
    T_LeftParen      shift, and go to state 38
    T_Inc_op         shift, and go to state 39
    T_Dash           shift, and go to state 40
    T_Plus           shift, and go to state 41
    T_Dec_op         shift, and go to state 42

    Expression                 go to state 110
    Assignment_Expression      go to state 53
    Conditional_Expression     go to state 54
    Logical_Or_Expression      go to state 55
    Logical_Xor_Expression     go to state 56
    Logical_And_Expression     go to state 57
    Inclusive_Or_Expression    go to state 58
    Exclusive_Or_Expression    go to state 59
    And_Expression             go to state 60
    Equality_Expression        go to state 61
    Relational_Expression      go to state 62
    Shift_Expression           go to state 63
    Additive_Expression        go to state 64
    Multiplicative_Expression  go to state 65
    Unary_Expression           go to state 66
    Postfix_Expression         go to state 67
    Unary_Operator             go to state 68
    Primary_Expression         go to state 69


state 77

   99 Iteration_Statement: T_For T_LeftParen . Expression_Statement Expression_Statement Expression T_RightParen Statement

    T_Identifier     shift, and go to state 34
    T_IntConstant    shift, and go to state 35
    T_FloatConstant  shift, and go to state 36
    T_BoolConstant   shift, and go to state 37
    T_LeftParen      shift, and go to state 38
    T_Inc_op         shift, and go to state 39
    T_Dash           shift, and go to state 40
    T_Plus           shift, and go to state 41
    T_Dec_op         shift, and go to state 42
    T_Semicolon      shift, and go to state 43

    Expression_Statement       go to state 111
    Expression                 go to state 52
    Assignment_Expression      go to state 53
    Conditional_Expression     go to state 54
    Logical_Or_Expression      go to state 55
    Logical_Xor_Expression     go to state 56
    Logical_And_Expression     go to state 57
    Inclusive_Or_Expression    go to state 58
    Exclusive_Or_Expression    go to state 59
    And_Expression             go to state 60
    Equality_Expression        go to state 61
    Relational_Expression      go to state 62
    Shift_Expression           go to state 63
    Additive_Expression        go to state 64
    Multiplicative_Expression  go to state 65
    Unary_Expression           go to state 66
    Postfix_Expression         go to state 67
    Unary_Operator             go to state 68
    Primary_Expression         go to state 69


state 78
